--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ background-color: white;
 }
 header {
   width: auto;
-  height: 150px;
 }
 .header-title {
   text-align: center;
@@ -20,7 +19,9 @@ header {
   background-color: aqua;
 }
 
-.menu {
+.header-list li {
+  list-style: none;
+  display: inline;
   padding: 0px 75px;
 }
 
