--- a/style.css
+++ b/style.css
@@ -48,10 +48,13 @@ p {
   background-color: paleturquoise;
   box-sizing: border-box;
 }
-.t-contents img {
-  width: 25%;
+.t-item {
+  display: inline-block;
+  width: 20%;
+}
+.t-item img {
+  width: 100%;
   height: 200px;
-
 }
 .footer-title {
   font-size: 50px;
