--- a/style.css
+++ b/style.css
@@ -10,52 +10,69 @@ header {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 60px;
 }
-
 .sub-title {
   text-align: center;
 }
-
 .header-list {
   background-color: aqua;
 }
-
 .header-list li {
   list-style: none;
   display: inline;
-  padding: 0px 75px;
+  padding: 0px 100px;
 }
-
 .main-text {
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 main img{
-  width: 100%;
+  width: 40%;
   height: 350px;
 }
-.maeoki p{
+.maeoki {
   text-align: center;
   font-size: 15px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 span{
   font-size: 17px;
   color: red;
 }
-p {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
 .mokuji {
   background-color: paleturquoise;
   box-sizing: border-box;
 }
-.t-contents img {
-  width: 25%;
+.t-item img {
+  width: 100%;
   height: 200px;
-
+}
+.t-contents {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 150px;
+}
+.t-item {
+  display: inline-block;
+  width: 23%;
+  height: 200px;
 }
 .footer-title {
-  font-size: 50px;
+  font-size: 100px;
   color:mediumturquoise;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin-top: 100px;
+}
+.footer-list {
+  background-color: aqua;
+}
+.footer-list li {
+  display: inline;
+  padding: 0px 100px;
+}
+.footer-list2 li {
+  display: inline;
+  padding: 0px 75px;
+}
+.footer-list2 {
+  background-color: aqua;
 }
