--- a/style.css
+++ b/style.css
@@ -24,17 +24,21 @@ header {
 .main-text {
   text-align: center;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 20px;
 }
-main img{
-  width: 40%;
+.shoukaibun img{
+  width: 45%;
   height: 350px;
+  margin-top: 60px;
 }
 .maeoki {
   text-align: center;
+  float: right;
   font-size: 15px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  padding-top: 150px;
 }
-span{
+span {
   font-size: 17px;
   color: red;
 }
@@ -50,11 +54,24 @@ span{
   width: 100%;
   height: 200px;
   margin-bottom: 150px;
+  margin-top: 100px;
 }
 .t-item {
   display: inline-block;
   width: 23%;
   height: 200px;
+}
+.text {
+  font-size: 20px;
+  padding: 10px 113px;
+  color: darkorange;
+}
+.setsumei {
+  padding-top: 100px;
+}
+.honbun {
+  padding-left: 60px;
+  padding-right: 60px;
 }
 .footer-title {
   font-size: 100px;
