--- a/resposive.css
+++ b/resposive.css
@@ -63,32 +63,57 @@
   .footer-list {
     display: none;
   }
-  .menu_wrapper {
-    display: block;
-  }
   .ham{
     position: relative;
     width: 40px;
     height: 40px;
     cursor: pointer;
-    background-color: rgba(0, 0, 255, 0.911);
-}
-/* ハンバーガボタンのライン */
-.ham_line {
+    background-color: #0cebf3ee;
+  }
+  /* ハンバーガボタンのライン */
+  .ham_line {
     transition: all 0.3s;
     position: absolute;
     left: 10px;
     width: 20px;
     height: 2px;
-    background-color: darkorchid;
-}
-.ham_line1 {
+    background-color: #FFF;
+  }
+  .ham_line1 {
     top: 10px;
-}
-.ham_line2 {
+  }
+  .ham_line2 {
     top: 18px;
-}
-.ham_line3 {
+  }
+  .ham_line3 {
     top: 26px;
-}
+  }
+  /* Javascriptでクリックイベントが発火した後の処理 ハンバーガボタンのライン */
+  .clicked .ham_line1{
+    transform: rotate(45deg);
+    top: 20px;
+  }
+  .clicked .ham_line2{
+    width: 0px;
+  }
+  .clicked .ham_line3{
+    transform: rotate(-45deg);
+    top: 20px;
+  }
+  /* メニューの表示 */
+  .menu {
+    position: fixed;
+    left: -400px;
+    width: 300px;
+    height: 125px;
+    background-color: #0cebf3ee;
+    transition: all 0.5s;
+    color: #0cebf3ee;
+  }
+  .clicked .menu {
+    left: 8px;
+  }
+  .menu_wrapper {
+    display: block;
+  }
 }
