--- a/resposive.css
+++ b/resposive.css
@@ -12,14 +12,7 @@
     font-size: 15px;
   }
   .header-list {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0px;
-  }
-  .header-list li {
-    flex: auto;
-    width: 50%;
-    padding: 10px 30px;
+    display: none;
   }
   .t-contents {
     display: flex;
@@ -39,7 +32,8 @@
     padding-right: 20px;
   }
   .top-idou {
-    padding: 5px 138px;
+    padding: 5px 130px;
+    margin-bottom: 10px;
   }
   .training img {
     width: 100%;
@@ -57,13 +51,11 @@
     font-size: 80px;
     margin-top: 5px;
   }
-  footer {
-    height: 300px;
-  }
-  .footer-list {
-    display: none;
+  .footer-list2 li {
+    padding: 5px 100px;
   }
   .ham{
+    display: block;
     position: relative;
     width: 40px;
     height: 40px;
@@ -104,7 +96,7 @@
   .menu {
     position: fixed;
     left: -400px;
-    width: 300px;
+    width: 360px;
     height: 125px;
     background-color: #0cebf3ee;
     transition: all 0.5s;
@@ -115,5 +107,8 @@
   }
   .menu_wrapper {
     display: block;
+  }
+  .main-text {
+    margin-top: 50px;
   }
 }
